# esp32-audio-streaming

./: .gitignore  CMakeLists.txt  README.md  index.html  sdkconfig
components/ei_model/: CMakeLists.txt  README.txt  ei_porting.cpp
components/ei_model/model-parameters/: model_metadata.h  model_variables.h
components/ei_model/tflite-model/: tflite_learn_842824_3_compiled.cpp  tflite_learn_842824_3_compiled.h
main/: CMakeLists.txt  config.h  main.c  main.cpp  mic_driver.c  mic_driver.h  s3_cam_test.c  w5500_driver.c  w5500_driver.h
tools/: sniffer.py
tools/dotnet/: AudioReceiver.cs  AudioReceiver.csproj
tools/python/: listener.py
